tests/errors/lexing/test09.cmp
program main 
begin
   var x := "a
              "  (* newline not allowed *)
end 